1. update : app_main_window.qml : qml --> Image

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/resources">
         <file>qmls/app_main_window.qml</file>
+        <file>images/minions.jpg</file>
     </qresource>
 </RCC>
